--- a/scripts/webex_fullsupport_draft.html
+++ b/scripts/webex_fullsupport_draft.html
@@ -209,6 +209,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
+    <li>cwru.webex.com</li>
     <li>Resolve ticket.</li>
   </ol>
 
@@ -216,6 +217,44 @@ WebEx; Online meetings; Technical issues; Cisco</p>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Refer to instructions in box below.<br>
+    <p>&nbsp;</p>
+    <div class="well">
+      <strong>Attend by telephone (audio only)</strong>
+        <ol>
+          <li>Call conference number provided in invitation email.</li>
+          <li>When prompted, enter meeting access code using telephone keypad.</li>
+          <li>A tone will indicate that you have entered the meeting.</li>
+        </ol>
+
+      <strong>Attend with computer</strong>
+        <ol>
+          <li>Click the meeting link provided by the organizer (e.g., https://cwru.webex.com/join/CWRUnetID)</li>
+          <li>If you have not previously attended a WebEx meeting, the system will prompt you to download and install the Meeting Center application.</li>
+          <li>The WebEx application will launch and you will join the meeting room.</li>
+          <li>Click Call Using Computer to connect meeting audio.</li>
+          <li>Or, click the three dots below to show other audio options and directions:
+            <ul>
+              <li>Call Me (the meeting will call you)</li>
+              <li>I Will Call In (click to show instructions)</li>
+              <li>Call Using Computer (default)</li>
+            </ul></li>
+          <li>When audio has connected successfully, the icon will turn from blue to green and text will read "Connected to Audio".</li>
+          <li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
+        </ol>
+
+      <strong>Attend with computer using telephone for audio</strong>
+        <ol>
+          <li>Click the meeting link provided by the organizer (e.g., https://cwru.webex.com/join/CWRUnetID)</li>
+          <li>If you have not previously attended a WebEx meeting, the system will prompt you to download and install the Meeting Center application.</li>
+          <li>The WebEx application will launch and you will join the meeting room.</li>
+          <li>A list of meeting attendees as well as video & audio options are shown in upper-right of the application window.</li>
+          <li>Call conference number provided in invitation email.</li>
+          <li>When prompted, enter meeting access code using telephone keypad.</li>
+          <li>A tone will indicate that you have entered the meeting.</li>
+        </ol>
+    </div>
+    <p>&nbsp;</p></li>
     <li>Resolve ticket.</li>
   </ol>
 
