Completed initial draftof Google Groups guide - needs revision.

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -155,11 +155,11 @@ h3 { padding-top: 20px; }
 <table class="table table-striped">
 	<tr>
 	<td>Add a new category group</td>
-	<td>desc</td></tr>
+	<td>Create a new category group with a name and short description. Category groups serve as a way to logically group like categories.</td></tr>
 
 	<tr>
 	<td>Add a new category</td>
-	<td>desc</tr>
+	<td>Create a category with a name and short description. Categories serve as a themed place to host topics of the same nature.</tr>
 </table>
 </div>
 </div>
@@ -377,7 +377,7 @@ h3 { padding-top: 20px; }
 <table class="table table-striped">
 	<tr>
 	<td>Add references</td>
-	<td>Choose which roles can add references to topics.</td></tr>
+	<td>Choose which roles or specific users can add references to topics.</td></tr>
 
 	<tr>
 	<td>Assign topics</td>
@@ -466,91 +466,91 @@ h3 { padding-top: 20px; }
 <table class="table table-striped">
 	<tr>
 	<td>Add members</td>
-	<td></td></tr>
+	<td>Choose which roles can add members to the group.</td></tr>
 
 	<tr>
 	<td>Approve members</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can approve requests to join the group.</td></tr>
 
 	<tr>
 	<td>Approve messages</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can approve messages from those who cannot post directly to the group.</td></tr>
 
 	<tr>
 	<td>Ban users</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can ban and unban users from the group.</td></tr>
 
 	<tr>
 	<td>Change any tag or category</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can change tags or categories of posts.</td></tr>
 
 	<tr>
 	<td>Delete any post</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can delete any post.</td></tr>
 
 	<tr>
 	<td>Delete topics</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can delete topics from the group.</td></tr>
 
 	<tr>
 	<td>Edit others' posts</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can edit the text of others' posts.</td></tr>
 
 	<tr>
 	<td>Edit own posts</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can edit the text of their own posts.</td></tr>
 
 	<tr>
 	<td>Hide abuse</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can hide and report abusive messsages.</td></tr>
 
 	<tr>
 	<td>Invite members</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can invite other users to be a member.</td></tr>
 
 	<tr>
 	<td>Lock topics</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can lock topics to block replies and prevent edits.</td></tr>
 
 	<tr>
 	<td>Mark duplicate</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can mark a topic as a duplicate of another topic.</td></tr>
 
 	<tr>
 	<td>Mark favorite reply on any other user's topics</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can mark any other user's post as a favorite reply.</td></tr>
 
 	<tr>
 	<td>Mark no response needed</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can flag a topic as not needing a response.</td></tr>
 
 	<tr>
 	<td>Modify members</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can modify a member, such as what role they have or turning on targeted moderation.</td></tr>
 
 	<tr>
 	<td>Move topics in</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can move topics into the forum.</td></tr>
 
 	<tr>
 	<td>Move topics out</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can move topics out of the forum.</td></tr>
 
 	<tr>
 	<td>Sticky topics</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can make a topic "sticky" by pinning it to the top of the forum.</td></tr>
 
 	<tr>
 	<td>Take topic</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can take a topic in the forum.</td></tr>
 
 	<tr>
 	<td>Unassign topic</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can remove an assigned user from a topic.</td></tr>
 
 	<tr>
 	<td>Unmark favorite reply on any topic</td>
-	<td>desc</td></tr>
+	<td>Choose which roles can un-pin any favorited post.</td></tr>
 </table>
 </div>
 </div>
