Complete draft of user-settings-master

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -70,7 +70,7 @@ h3 { padding-top: 20px; }
 	
 	<tr>
 	<td>Auto replies</td>
-	<td>desc</td></tr> 
+	<td>Enable automatic replies to emails that the group receives. Can set custom messages for different types of recipients.</td></tr> 
 	
 	<tr>
 	<td>Post replies</td>
@@ -78,11 +78,11 @@ h3 { padding-top: 20px; }
 	
 	<tr>
 	<td>Max message size</td>
-	<td>desc</td></tr>
+	<td>Choose a size limit for messages sent to the group. By default, this is 25 MB.</td></tr>
 	
 	<tr>
 	<td>Bounced email notifications</td>
-	<td>desc</td></tr>
+	<td>Choose whether or not users whose email bounces are notified.</td></tr>
 </table>
 </div>
 
