--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -8,7 +8,6 @@
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 
@@ -27,7 +26,7 @@
 
 <style>
 
-h2 { padding-top: 30px; }
+/*h2 { padding-top: 30px; }*/
 h3 { padding-top: 20px; }
 body { padding-top: 100px; }
 
@@ -58,18 +57,18 @@ body { padding-top: 100px; }
 
 <p>While each group is created with a specific set of attributes, many of the default settings can be modified by the group’s manager. These customizable attributes are accessed from the menu appearing on the left side of the group management screen, and are divided into four categories:</p>
 
-<ul>
+<!-- <ul>
 	<li><strong>Settings</strong> - controls group appearance and behavior with regard to members</li>
 	<li><strong>Permissions</strong> - determines the degree of control a user or role has with regard to group settings</li>
 	<li><strong>Roles</strong> - controls settings and permissions for a named class of users</li>
 	<li><strong>Information</strong> - controls how the group interacts with mail servers and appears on the web</li>
 </ul>
-
+ -->
 <!-- Settings start -->
 <div id="settings" class="row">
 <div class="col-md-12 col-sm-12">
 <h2><a onclick="toggle_visibility('settings-detail');">Settings</a></h2>
-<br>
+<p class="lead">controls group appearance and behavior with regard to members</p>
 </div>
 </div>
 
@@ -188,7 +187,7 @@ body { padding-top: 100px; }
 <div id="roles" class="row">
 <div class="col-md-12 col-sm-12">
 <h2><a onclick="toggle_visibility('roles-detail');">Roles</a></h2>
-<br>
+<p class="lead">controls settings and permissions for a named class of users</p>
 </div>
 </div>
 
@@ -257,7 +256,7 @@ body { padding-top: 100px; }
 <div id="information" class="row">
 <div class="col-md-12 col-sm-12">
 <h2><a onclick="toggle_visibility('information-detail');">Information</a></h2>
-<br>
+<p class="lead">controls how the group interacts with mail servers and appears on the web</p>
 </div>
 </div>
 
@@ -354,7 +353,7 @@ body { padding-top: 100px; }
 <div id="permissions" class="row">
 <div class="col-md-12 col-sm-12">
 <h2><a onclick="toggle_visibility('permissions-detail');">Permissions</a></h2>
-<br>
+<p class="lead">determines the degree of control a user or role has with regard to group settings</p>
 </div>
 </div>
 
