naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -72,9 +72,11 @@ body { padding-top: 100px; }
 </div>
 
 <div id="settings-detail" class="row" style="display:none">
+<div class="col-md-12 col-sm-12"><p class="lead">controls group appearance and behavior with regard to members</p>
+
 <div class="col-md-7 col-sm-7">
 
-<p class="lead">controls group appearance and behavior with regard to members</p>
+
 
 <div class="panel panel-default">
 <div class="panel-heading"><strong>Email options</strong></div>
@@ -177,7 +179,7 @@ body { padding-top: 100px; }
 
 	<tr>
 	<td>Add a new category</td>
-	<td>Create a category with a name and short description. Categories serve as a themed place to host topics of the same nature.</tr>
+	<td>Create a category with a name and short description. Categories serve as a themed place to host topics of the same nature.</td></tr>
 </table>
 </div>
 </div>
@@ -252,7 +254,7 @@ body { padding-top: 100px; }
 </div>
 </div>
 </div>
-
+</div>
 
 
 <!-- Information start -->
@@ -363,6 +365,8 @@ body { padding-top: 100px; }
 </div>
 
 <div id="permissions-detail" class="row" style="display:none">
+
+
 <div class="col-md-6 col-sm-6">
 
 <p class="lead">determines the degree of control a user or role has with regard to group settings</p>
