naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -72,11 +72,11 @@ body { padding-top: 100px; }
 </div>
 
 <div id="settings-detail" class="row" style="display:none">
-<div class="col-md-12 col-sm-12"><p class="lead">controls group appearance and behavior with regard to members</p>
+<div class="col-md-12 col-sm-12">
 
 <div class="col-md-7 col-sm-7">
 
-
+<p class="lead">controls group appearance and behavior with regard to members</p>
 
 <div class="panel panel-default">
 <div class="panel-heading"><strong>Email options</strong></div>
@@ -254,7 +254,7 @@ body { padding-top: 100px; }
 </div>
 </div>
 </div>
-</div>
+
 
 
 <!-- Information start -->
