naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -72,7 +72,7 @@ body { padding-top: 100px; }
 </div> -->
 
 
-<a onclick="toggle_visibility('settings-detail');" class="btn btn-primary btn-lg btn-block">Settings</a>
+<a onclick="toggle_visibility('settings-detail');" class="btn btn-primary btn-lg btn-block"><h3><span class="pull-left">Settings</span></h3><span class="glyphicon glyphicon-print pull-right"></a>
 
 <div id="settings-detail" style="display:none">
 <div id="settings-header" class="row">
