naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -27,7 +27,7 @@
 <style>
 
 /*h2 { padding-top: 30px; }*/
-h3 { padding-top: 20px; }
+/*h3 { padding-top: 20px; }*/
 body { padding-top: 100px; }
 
 </style>
@@ -72,7 +72,7 @@ body { padding-top: 100px; }
 </div> -->
 
 
-<a onclick="toggle_visibility('settings-detail');" class="btn btn-primary btn-lg btn-block"><h3><span class="pull-left">Settings</span></h3><span class="glyphicon glyphicon-print pull-right"></a>
+<a onclick="toggle_visibility('settings-detail');" class="btn btn-primary btn-lg btn-block"><h3><span class="pull-left">Settings</span></h3><span class="glyphicon glyphicon-cog pull-right"></a>
 
 <div id="settings-detail" style="display:none">
 <div id="settings-header" class="row">
@@ -187,7 +187,7 @@ body { padding-top: 100px; }
 </table>
 </div>
 </div>
-</div>
+
 
 
 <!-- Roles start -->
