--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -72,7 +72,7 @@ body { padding-top: 100px; }
 </div> -->
 
 
-<a onclick="toggle_visibility('settings-detail');" class="btn btn-primary btn-lg btn-block"><h3><span class="pull-left">Settings</span></h3><span class="glyphicon glyphicon-cog pull-right"></a>
+<h3><a onclick="toggle_visibility('settings-detail');" class="btn btn-lg btn-block"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a></h3>
 
 <div id="settings-detail" style="display:none">
 <div id="settings-header" class="row">
