--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -34,7 +34,7 @@ body { padding-top: 100px; }
 
 </head>
 
-<nav class="navbar navbar-default navbar-fixed-top" style="  background-color: #0a304e;">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #0a304e;">
   	<div class="container">
 		<div class="row">
 		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
@@ -72,9 +72,10 @@ body { padding-top: 100px; }
 </div> -->
 
 
-<h3><a onclick="toggle_visibility('settings-detail');" class="btn btn-lg btn-block"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a></h3>
+<h2><a onclick="toggle_visibility('settings-detail');" class="btn btn-lg btn-block" style="background-color: #0a304e;"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a></h2>
 
 <div id="settings-detail" style="display:none">
+<hr>
 <div id="settings-header" class="row">
 <div class="col-md-12 col-sm-12"><p class="lead">controls group appearance and behavior with regard to members</p></div>
 </div>
