--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -72,13 +72,13 @@ body { padding-top: 100px; }
 </div> -->
 
 
-<h2><a onclick="toggle_visibility('settings-detail');" class="btn btn-lg btn-block" style="background-color: #0a304e;"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a></h2>
+<a onclick="toggle_visibility('settings-detail');" class="btn btn-lg btn-block" style="background-color: #c8d1d7"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a>
 
 <div id="settings-detail" style="display:none">
 <hr>
+
 <div id="settings-header" class="row">
-<div class="col-md-12 col-sm-12"><p class="lead">controls group appearance and behavior with regard to members</p></div>
-</div>
+<div class="col-md-12 col-sm-12"><p class="lead">controls group appearance and behavior with regard to members</p></div></div>
 
 <div id="settings-table" class="row">
 <div class="col-md-7 col-sm-7">
@@ -188,7 +188,7 @@ body { padding-top: 100px; }
 </table>
 </div>
 </div>
-
+</div>
 
 
 <!-- Roles start -->
