naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -71,8 +71,9 @@ body { padding-top: 100px; }
 </div>
 </div> -->
 
-
-<a onclick="toggle_visibility('settings-detail');" class="btn btn-lg btn-block" style="background-color: #c8d1d7"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a>
+<div class="well-sm">
+<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a>
+</div>
 
 <div id="settings-detail" style="display:none">
 <hr>
@@ -189,7 +190,7 @@ body { padding-top: 100px; }
 </div>
 </div>
 </div>
-
+</div>
 
 <!-- Roles start -->
 <div id="roles" class="row">
