naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -71,8 +71,10 @@ body { padding-top: 100px; }
 </div>
 </div> -->
 
-<div class="well-sm">
-<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a>
+<div class="well well-sm">
+	<h3>
+		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings</span><span class="glyphicon glyphicon-cog pull-right"></span></a>
+	</h3>
 </div>
 
 <div id="settings-detail" style="display:none">
