naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -59,9 +59,11 @@ body { padding-top: 100px; }
 
 
 <!-- Settings start -->
+<div>
 	<h3>
 		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings <span class="glyphicon glyphicon-wrench"></span> ... </span></a>
 	</h3>
+</div>
 
 <div id="settings-detail" style="display:none">
 <hr>
@@ -181,9 +183,12 @@ body { padding-top: 100px; }
 </div>
 
 <!-- Roles start -->
+
+<div>
 	<h3>
 		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">Roles <span class="glyphicon glyphicon-user"></span> ... </span></a>
 	</h3>
+</div>
 
 <div id="roles-detail" style="display:none">
 <hr>
@@ -254,9 +259,11 @@ body { padding-top: 100px; }
 
 <!-- Information start -->
 
+<div>
 	<h3>
 		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">Information <span class="glyphicon glyphicon-cog"></span> ... </span></a>
 	</h3>
+</div>
 
 <div id="information-detail" style="display:none">
 <hr>
@@ -352,13 +359,15 @@ body { padding-top: 100px; }
 </div>
 </div>
 </div>
+</div>
 
 <!-- Permissions start -->
 
-
+<div>
 	<h3>
 		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">Permissions <span class="glyphicon glyphicon-lock"></span> ... </span></a>
 	</h3>
+</div>
 
 <div id="permissions-detail" style="display:none">
 <hr>
