naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -59,17 +59,22 @@ body { padding-top: 100px; }
 
 
 <!-- Settings start -->
-<div>
+<div class="row">
+<div class="col-md-12 col-sm-12">
 	<h3>
 		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings <span class="glyphicon glyphicon-wrench"></span> ... </span></a>
 	</h3>
 </div>
+</div>
+
 
 <div id="settings-detail" style="display:none">
-<hr>
+
 
 <div id="settings-header" class="row">
 <div class="col-md-12 col-sm-12"><p class="lead">Settings control group appearance and behavior with regard to members</p></div></div>
+
+<hr>
 
 <div id="settings-table" class="row">
 <div class="col-md-7 col-sm-7">
@@ -184,17 +189,20 @@ body { padding-top: 100px; }
 
 <!-- Roles start -->
 
-<div>
+<div class="row">
+<div class="col-md-12 col-sm-12">
 	<h3>
 		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">Roles <span class="glyphicon glyphicon-user"></span> ... </span></a>
 	</h3>
 </div>
+</div>
 
 <div id="roles-detail" style="display:none">
-<hr>
 
 <div id="roles-header" class="row">
 <div class="col-md-12 col-sm-12"><p class="lead">Roles control settings and permissions for a named class of users</p></div></div>
+
+<hr>
 
 <div id="roles-table" class="row">
 <div class="col-md-6 col-sm-6">
@@ -259,10 +267,12 @@ body { padding-top: 100px; }
 
 <!-- Information start -->
 
-<div>
+<div class="row">
+<div class="col-md-12 col-sm-12">
 	<h3>
 		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">Information <span class="glyphicon glyphicon-cog"></span> ... </span></a>
 	</h3>
+</div>
 </div>
 
 <div id="information-detail" style="display:none">
@@ -363,10 +373,12 @@ body { padding-top: 100px; }
 
 <!-- Permissions start -->
 
-<div>
+<div class="row">
+<div class="col-md-12 col-sm-12">
 	<h3>
 		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">Permissions <span class="glyphicon glyphicon-lock"></span> ... </span></a>
 	</h3>
+</div>
 </div>
 
 <div id="permissions-detail" style="display:none">
