--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -60,9 +60,9 @@ body { padding-top: 100px; }
 
 <!-- Settings start -->
 <div class="row">
-<div class="col-md-12 col-sm-12">
+<div class="col-md-6 col-sm-6">
 	<h3>
-		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings <span class="glyphicon glyphicon-wrench"></span> ... </span></a>
+		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">Settings ... </span><span class="glyphicon glyphicon-wrench pull-right"></span></a>
 	</h3>
 </div>
 </div>
@@ -190,9 +190,9 @@ body { padding-top: 100px; }
 <!-- Roles start -->
 
 <div class="row">
-<div class="col-md-12 col-sm-12">
+<div class="col-md-6 col-sm-6">
 	<h3>
-		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">Roles <span class="glyphicon glyphicon-user"></span> ... </span></a>
+		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">Roles ... </span><span class="glyphicon glyphicon-user pull-right"></span></a>
 	</h3>
 </div>
 </div>
@@ -268,9 +268,9 @@ body { padding-top: 100px; }
 <!-- Information start -->
 
 <div class="row">
-<div class="col-md-12 col-sm-12">
+<div class="col-md-6 col-sm-6">
 	<h3>
-		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">Information <span class="glyphicon glyphicon-cog"></span> ... </span></a>
+		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">Information ... </span><span class="glyphicon glyphicon-cog pull-right"></span></a>
 	</h3>
 </div>
 </div>
@@ -374,9 +374,9 @@ body { padding-top: 100px; }
 <!-- Permissions start -->
 
 <div class="row">
-<div class="col-md-12 col-sm-12">
+<div class="col-md-6 col-sm-6">
 	<h3>
-		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">Permissions <span class="glyphicon glyphicon-lock"></span> ... </span></a>
+		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">Permissions ... </span><span class="glyphicon glyphicon-lock pull-right"></span></a>
 	</h3>
 </div>
 </div>
