--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -60,11 +60,14 @@ body { padding-top: 100px; }
 
 <!-- Settings start -->
 <div class="row">
-<div class="col-md-4 col-sm-3">
+<div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">1. Settings ... </span><span class="glyphicon glyphicon-wrench pull-right"></span></a>
+		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">1. Settings ... </span></a>
 	</h3>
 </div>
+
+<div class="col-md-8 col-sm-8">
+	<span class="glyphicon glyphicon-wrench pull-left"></span></div>
 </div>
 
 
@@ -190,11 +193,14 @@ body { padding-top: 100px; }
 <!-- Roles start -->
 
 <div class="row">
-<div class="col-md-4 col-sm-3">
+<div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">2. Roles ... </span><span class="glyphicon glyphicon-user pull-right"></span></a>
+		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">2. Roles ... </span></a>
 	</h3>
 </div>
+
+<div class="col-md-8 col-sm-8">
+	<span class="glyphicon glyphicon-user pull-left"></span></div>
 </div>
 
 <div id="roles-detail" style="display:none">
@@ -268,11 +274,14 @@ body { padding-top: 100px; }
 <!-- Information start -->
 
 <div class="row">
-<div class="col-md-4 col-sm-3">
+<div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">3. Information ... </span><span class="glyphicon glyphicon-cog pull-right"></span></a>
+		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">3. Information ... </span></a>
 	</h3>
 </div>
+
+<div class="col-md-8 col-sm-8">
+	<span class="glyphicon glyphicon-cog pull-left"></span></div>
 </div>
 
 <div id="information-detail" style="display:none">
@@ -374,11 +383,14 @@ body { padding-top: 100px; }
 <!-- Permissions start -->
 
 <div class="row">
-<div class="col-md-4 col-sm-3">
+<div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">4. Permissions ... </span><span class="glyphicon glyphicon-lock pull-right"></span></a>
+		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">4. Permissions ... </span></a>
 	</h3>
 </div>
+
+<div class="col-md-8 col-sm-8">
+	<span class="glyphicon glyphicon-lock pull-left"></span></div>
 </div>
 
 <div id="permissions-detail" style="display:none">
