naughty no. no updating in master... tsk

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -62,12 +62,9 @@ body { padding-top: 100px; }
 <div class="row">
 <div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">1. Settings ... </span></a>
+		<a onclick="toggle_visibility('settings-detail');"><span class="pull-left">1. Settings ... </span><span class="glyphicon glyphicon-wrench pull-right"></span></a>
 	</h3>
 </div>
-
-<div class="col-md-8 col-sm-8">
-	<span class="glyphicon glyphicon-wrench pull-left"></span></div>
 </div>
 
 
@@ -195,12 +192,9 @@ body { padding-top: 100px; }
 <div class="row">
 <div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">2. Roles ... </span></a>
+		<a onclick="toggle_visibility('roles-detail');"><span class="pull-left">2. Roles ... </span><span class="glyphicon glyphicon-user pull-right"></span></a>
 	</h3>
 </div>
-
-<div class="col-md-8 col-sm-8">
-	<span class="glyphicon glyphicon-user pull-left"></span></div>
 </div>
 
 <div id="roles-detail" style="display:none">
@@ -276,12 +270,9 @@ body { padding-top: 100px; }
 <div class="row">
 <div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">3. Information ... </span></a>
+		<a onclick="toggle_visibility('information-detail');"><span class="pull-left">3. Information ... </span><span class="glyphicon glyphicon-cog pull-right"></span></a>
 	</h3>
 </div>
-
-<div class="col-md-8 col-sm-8">
-	<span class="glyphicon glyphicon-cog pull-left"></span></div>
 </div>
 
 <div id="information-detail" style="display:none">
@@ -385,12 +376,9 @@ body { padding-top: 100px; }
 <div class="row">
 <div class="col-md-4 col-sm-4">
 	<h3>
-		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">4. Permissions ... </span></a>
+		<a onclick="toggle_visibility('permissions-detail');"><span class="pull-left">4. Permissions ... </span><span class="glyphicon glyphicon-lock pull-right"></span></a>
 	</h3>
 </div>
-
-<div class="col-md-8 col-sm-8">
-	<span class="glyphicon glyphicon-lock pull-left"></span></div>
 </div>
 
 <div id="permissions-detail" style="display:none">
