--- a/guides/Google-groups-support.html
+++ b/guides/Google-groups-support.html
@@ -90,7 +90,7 @@ h2 { padding-top: 60px; }
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Toubleshoot Groups</h3>
+      <h3 class="panel-title">Troubleshoot Groups</h3>
     </div>
       <ul class="list-group">
         <a href="https://support.google.com/groups/answer/75960?hl=en&ref_topic=2383651" class="list-group-item">How to view the full message headers of an email</a>
