--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -55,9 +55,8 @@ body { padding-top: 100px; }
 <button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
 <p>&nbsp;</p>
 
-<p>While each group is created with a specific set of attributes, many of the default settings can be modified by the group’s manager.</p>
-<p>These customizable attributes are accessed from the menu appearing on the left side of the group management screen, and are divided into four categories:</p>
-
+<p>Many of a group's default settings can be changed by a manager. A manager may also delegate some of these capabilities to another user or group of users.</p>
+<p>Customizable group attributes are accessed from a menu on the left side of the group management screen, and are divided into four categories:</p>
 
 <!-- Settings start -->
 <div class="row">
@@ -89,6 +88,7 @@ body { padding-top: 100px; }
 	<tr>
 	<td>Subject prefix</td>
 	<td>This text will be displayed before whatever you type into the subject of a message.
+	<p>nbsp;</p>
 	<p><strong>Default</strong>: blank</p></td></tr>
 	
 	<tr>
